# M12.4 (ADR-048) — the Metrocalk MCP server: an MCP server (rmcp, stdio) exposing the validated COMPOSE
# op-set as tools, so any MCP client (Claude/etc.) edits Rules/scenes through the SAME pipeline as humans/
# plugins (`apply_composition` → the one commit pipeline). The tool LOGIC (lib.rs — load .mtk → apply →
# save) is core-only + testable; the rmcp/stdio wiring (main.rs) is a thin layer. Native-only (the engine
# is Flecs-backed); the AI is a GUEST — core/ecs never link this crate (the AI-is-a-guest CI tripwire).
[package]
name = "metrocalk-mcp"
description = "The Metrocalk MCP server — exposes the validated compose op-set as MCP tools (M12.4)."
edition.workspace = true
version.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "metrocalk_mcp"
path = "src/lib.rs"

[[bin]]
name = "metrocalk-mcp"
path = "src/main.rs"

[dependencies]
metrocalk-core = { path = "../core" }
metrocalk-ecs = { path = "../ecs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The official Rust MCP SDK (rmcp 1.8.0, latest at execution 2026-06-29; published 2026-06-23). The stdio
# server + the #[tool]/#[tool_router] router. `transport-io` = the stdio transport; `server`/`macros` are
# default but listed for clarity. We derive JsonSchema via the `rmcp::schemars` re-export (rmcp pins
# schemars 1.0), so no separate schemars dep / version mismatch. tokio is rmcp's async runtime.
rmcp = { version = "1.8", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }

[lints]
workspace = true
