# The desktop editor shell (M2.6). Standalone Cargo workspace (its own `[workspace]`) so the parent
# metrocalk workspace doesn't claim it — like the spikes. Real core + real bridge, no mocks.
[workspace]

[package]
name = "metrocalk-editor-shell-app"
version = "0.1.0"
edition = "2021"
description = "M2.6 desktop editor — transparent WebView2 (M2.5 UI) over a native wgpu viewport (M2.2 scene), ADR-008 single-window."
publish = false

[[bin]]
name = "metrocalk-editor-shell"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The real authoritative core + the M2.6 bridge (apply_edit / project_full — no MockCore).
metrocalk-core = { path = "../../core" }
metrocalk-ecs = { path = "../../ecs" }
metrocalk-editor-shell = { path = ".." }
# The local asset/import substrate (M4): glTF import + content-addressed store + GPU mesh packing.
metrocalk-assets = { path = "../../assets" }
# The token economy (M7): the wallet/ledger types the three paid sinks meter against.
metrocalk-economy = { path = "../../economy" }

# Native wgpu viewport (M2.2 instanced render path). DX12 disabled — wgpu-hal 29's DX12 fights the
# `windows` crate version Tauri/webview2-com pins (the diamond M2.1/M2.3 documented); Vulkan is the
# project's native backend (ADR-003), GLES the fallback.
wgpu = { version = "29.0.3", default-features = false, features = ["vulkan", "gles", "wgsl"] }
pollster = "0.4.0"
raw-window-handle = "0.6.2"
bytemuck = { version = "1.19", features = ["derive"] }
glam = { version = "0.30", features = ["bytemuck"] }

[dev-dependencies]
# PNG encode for the offscreen render-evidence bench (examples/mesh_frame_bench.rs). Pure Rust.
png = "0.18"

[profile.dev]
opt-level = 1
