# The desktop editor shell (M2.6). Standalone Cargo workspace (its own `[workspace]`) so the parent
# metrocalk workspace doesn't claim it — like the spikes. Real core + real bridge, no mocks.
[workspace]

[package]
name = "metrocalk-editor-shell-app"
version = "0.1.0"
edition = "2021"
description = "M2.6 desktop editor — transparent WebView2 (M2.5 UI) over a native wgpu viewport (M2.2 scene), ADR-008 single-window."
publish = false

[[bin]]
name = "metrocalk-editor-shell"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Native Open/Save file dialogs for the M10.3 File menu (project New/Open/Save/Save As).
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The real authoritative core + the M2.6 bridge (apply_edit / project_full — no MockCore).
metrocalk-core = { path = "../../core" }
metrocalk-ecs = { path = "../../ecs" }
metrocalk-editor-shell = { path = ".." }
# The local asset/import substrate (M4): glTF import + content-addressed store + GPU mesh packing.
# `fbx`+`ktx2` enable the native FFI importers (M11.1, ADR-040) — the .exe imports FBX (ufbx) and KTX2/basis
# (basis-universal). The wasm funnel never builds this crate with them (the browser converts/transcodes
# server-side — the explicit seam).
metrocalk-assets = { path = "../../assets", features = ["fbx", "ktx2"] }
# The token economy (M7): the wallet/ledger types the three paid sinks meter against.
metrocalk-economy = { path = "../../economy" }
# The physics subsystem (M8.2): the project-owned `Physics` trait (Rapier wrapped). Only the binary
# links it — `capscene` (the bridge lib) stays physics-free. No rapier/parry type leaks across (CI-gated).
metrocalk-physics = { path = "../../physics" }
# The interchange tier (M8.5) — URDF/USD import behind the Interchange trait. No urdf_rs/openusd type
# leaks across (CI grep-gated, like rapier in /physics).
metrocalk-interchange = { path = "../../interchange" }
# The transform gizmo (M9.1 / G1) — translate/rotate/scale behind the Gizmo trait. Its public surface is
# plain arrays (glam internal only); render.rs converts to/from its glam viewport types at the boundary.
metrocalk-gizmo = { path = "../../gizmo" }

# Native wgpu viewport (M2.2 instanced render path). DX12 disabled — wgpu-hal 29's DX12 fights the
# `windows` crate version Tauri/webview2-com pins (the diamond M2.1/M2.3 documented); Vulkan is the
# project's native backend (ADR-003), GLES the fallback.
wgpu = { version = "29.0.3", default-features = false, features = ["vulkan", "gles", "wgsl"] }
pollster = "0.4.0"
raw-window-handle = "0.6.2"
bytemuck = { version = "1.19", features = ["derive"] }
glam = { version = "0.30", features = ["bytemuck"] }

[dev-dependencies]
# PNG encode for the offscreen render-evidence bench (examples/mesh_frame_bench.rs). Pure Rust.
png = "0.18"

[profile.dev]
opt-level = 1
