[package]
name = "metrocalk-wasm-spike"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# Native bin: `cargo run --bin triangle` opens a window. Wasm: cdylib loaded by the wasm-bindgen
# glue. Distinct bin name avoids the .pdb collision with the cdylib's normalized name.
[[bin]]
name = "triangle"
path = "src/main.rs"

[dependencies]
wgpu = "29.0.3"
winit = "0.30.13"
raw-window-handle = "0.6.2"
log = "0.4.32"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4.0"
env_logger = "0.11.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.125"
wasm-bindgen-futures = "0.4.75"
js-sys = "0.3.102"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.102", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "Performance",
    "CssStyleDeclaration",
] }

# Smaller, faster-loading wasm: optimize for size, fat LTO, abort on panic.
[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
